# flashcards_app_v3

./: .gitignore  README.md  alembic.ini  pyproject.toml  zippify_project_contents.sh
alembic/: env.py
alembic/versions/: 23535c0ee70f_init_schema_baseline.py
backend/: database.py  main.py  models.py
backend/routers/: assets.py  cards.py  reviews.py
docs/: flashcards_app_v3_notes.org
frontend/: index.html
scripts/: __v1__populate_some_cards_uv_git.py  add_flashcards_script_v1.py  add_flashcards_script_v2.py  new_cards.txt  populate_some_cards_uv_git.py  zippify_project_contents.sh
static/js/: app.js
static/js/components/: Card.js
tools/import_flashcards/: import_flashcards.py  import_flashcards.txt
tools/import_flashcards/bak/: import_flashcards.txt
